# Backend

./: LICENSE  Makefile  Readme.md  docker-compose.yml  local.yml  pyproject.toml
.envs/.local/: .django  .postgres
backend/: manage.py
backend/accounts/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_remove_customuser_name_customuser_age_range.py  0003_alter_customuser_age_range.py  0004_alter_customuser_age_range.py  0005_alter_customuser_options_customuser_groups_and_more.py  0006_alter_customuser_date_joined.py  0007_alter_customuser_options.py
backend/config/: config.json  settings.py  urls.py  utils.py
backend/config/settings/: base.py  local.py
backend/management/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/management/migrations/: 0001_initial.py  0002_alter_bloodsugarmanager_options_and_more.py  0003_feedbackmanager_bloodsugarmanager_feedback.py  0004_alter_bloodsugarmanager_feedback.py  0005_alter_feedbackmanager_content.py  0006_remove_bloodsugarmanager_evening_and_more.py
docker/: Dockerfile  entrypoint.sh
docker/local/django/: Dockerfile  entrypoint  start
requirements/: base.txt
